# cool-python-lib

./: pyproject.toml
cool_python_lib/: cli.py  pred.py  train.py
example/: sample.jsonl
