[tool.poetry]
name = "cool-python-lib"
version = "0.1.0"
description = ""
authors = ["sobamchan <oh.sore.sore.soutarou@gmail.com>"]
readme = "README.md"
packages = [{include = "cool_python_lib"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.0"
sienna = "^0.1.5"
sentence-transformers = "^2.2.2"


[tool.poetry.group.dev.dependencies]
neovim = "^0.3.1"
ipython = "^8.8.0"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cool_python_lib = "cool_python_lib.cli:main"
